[package]
name = "subscript"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"


[dependencies]
html5ever = "0.25.1"
selectors = "0.22.0"
cssparser = "0.27.2"
markup5ever = "0.10.0"
tendril = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
markup5ever_rcdom = "0.1.0"
comrak = "0.9.0"
regex = "0.2"
lazy_static = "1.0.0"