[package]
name = "subscript"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"


[dependencies]
# selectors = "0.22.0"
# cssparser = "0.27.2"
html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_rcdom = "0.1.0"
tendril = "0.4.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
regex = "0.2"
lazy_static = "1.0.0"
structopt = { version = "0.3"}
glob = "0.3.0"
rand = "0.7.3"
