[package]
name = "subscript"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"


[dependencies]
pct-str = "1.1.0"
# selectors = "0.22.0"
# cssparser = "0.27.2"
html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_rcdom = "0.1.0"
tendril = "0.4.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
regex = "0.2"
lazy_static = "1.0.0"
structopt = { version = "0.3"}
glob = "0.3.0"
rand = "0.7.3"
# Server
tokio = { version = "0.2", features = ["rt-core", "macros"] }
hyper = "0.13"
headers = "0.3"
mime_guess = "2.0"
percent-encoding = "2.1"
# Compression
brotli = "3"
flate2 = "1.0"
# Rendering
tera = "1"
ignore = "0.4" # Respect to .gitignore while listing directories.
# Logging
chrono = "0.4"
# Directory Download
qstring = "0.7"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
hotwatch = "0.4.5"
futures-util = "0.3.8"
rayon = "1.5.0"
