[package]
name = "ss-cssom-tree"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
description = "This crate is an internal dependency of Subscript (WIP)."
license = "AGPL-3.0-or-later"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
either = "1.5.2"
ss-css-types = {path = "../ss-css-types", version="0.1.0"}


