[package]
name = "ss-dom-tree"
version = "0.1.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
description = "Work in progress..."
license = "Copyright 2019 Colbyn Wadman"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
serde = {version = "1.0.89", features = ["derive"]}
either = "1.5.2"
Inflector = "0.11.4"
ss-web-utils = {path = "../ss-web-utils", version="0.1.0"}
ss-trees = {path = "../ss-trees", version="0.1.0"}
ss-view-tree = {path = "../ss-view-tree", version="0.1.0"}

###############################################################################
# RUST-WASM
###############################################################################
js-sys = "*"
wasm-bindgen = "0.2.43"
console_error_panic_hook = "*"


[dependencies.web-sys]
version = "0.3.20"
features = [
    "console",
    "Comment",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlFormElement",
    "EventTarget",
    "Event",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "Window",
    "History",
    "Location",
    "StyleSheet",
    "HtmlStyleElement",
    "CssRule",
    "CssRuleList",
    "CssStyleRule",
    "CssStyleSheet",
    "Storage",
    "DocumentFragment",
]


