[package]
name = "ss-trees"
version = "0.1.1"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
description = "This crate is an internal dependency of Subscript (WIP)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/colbyn/subscript"

[dependencies]
either = "1.5.2"
itertools = "0.8.0"
ss-web-utils = {path = "../ss-web-utils", version="0.1.1"}

