[package]
name = "ss-view-tree"
version = "0.1.1"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
description = "This crate is an internal dependency of Subscript (WIP)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/colbyn/subscript"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
serde = {version = "1.0.89", features = ["derive"]}
either = "1.5.2"
ss-trees = {path = "../ss-trees", version="0.1.1"}
ss-web-utils = {path = "../ss-web-utils", version="0.1.1"}
# ss-css-types = {path = "../ss-css-types", version="0.1.1"}
ss-css-properties = {path="../ss-css-properties", version="0.1.1"}

###############################################################################
# RUST-WASM
###############################################################################
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"


[dependencies.web-sys]
version = "0.3.20"
features = [
    "EventTarget",
]


