[package]
name = "subscript"
version = "0.1.1"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
description = "Work in progress..."
license = "AGPL-3.0-or-later"
repository = "https://github.com/colbyn/subscript"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
rand = {version="0.6.5", features = ["wasm-bindgen"]}
serde = {version = "1.0.89", features = ["derive"]}
either = "1.5.2"
ss-web-utils = {path = "../ss-web-utils", version="0.1.1"}
ss-trees = {path = "../ss-trees", version="0.1.1"}
ss-view-tree = {path = "../ss-view-tree", version="0.1.1"}
ss-dom-tree = {path = "../ss-dom-tree", version="0.1.1"}
ss-program = {path = "../ss-program", version="0.1.1"}

###############################################################################
# RUST-WASM
###############################################################################
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "Comment",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlFormElement",
    "EventTarget",
    "Event",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "Window",
    "History",
    "Location",
    "StyleSheet",
    "HtmlStyleElement",
    "CssRule",
    "CssRuleList",
    "CssStyleRule",
    "CssStyleSheet",
    "Storage",
]

