[package]
name = "subscript"
version = "0.2.5"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
description = "Work in progress..."
repository = "https://github.com/colbyn/subscript"
license = "MPL-2.0"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
rand = {version="0.6.5", features = ["wasm-bindgen"]}
serde = {version = "1.0.89", features = ["derive", "rc"]}
serde_json = "1.0.39"
either = "1.5.2"
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"
console_error_panic_hook = "0.1.6"

# CMS-APP DEPENDENCIES
uuid = { version = "0.7", features = ["serde", "v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "Comment",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlFormElement",
    "EventTarget",
    "Event",
    "HtmlCollection",
    "Node",
    "NodeList",
    "Text",
    "CharacterData",
    "Window",
    "History",
    "Location",
    "StyleSheet",
    "HtmlStyleElement",
    "CssRule",
    "CssRuleList",
    "CssStyleRule",
    "CssStyleSheet",
    "Storage",
    "DomTokenList",
    "CssStyleSheet",
    "XmlHttpRequest",
    "XmlHttpRequestEventTarget",
]

