[package]
name = "cms-app"
version = "0.2.0"
authors = ["Colbyn Wadman <hello@colbyn.com>"]
edition = "2018"
description = "Work in progress..."
repository = "https://github.com/colbyn/subscript"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
subscript = {path = "../../subscript", version="0.2.0"}
rand = {version="0.6.5", features = ["wasm-bindgen"]}
serde = {version = "1.0.89", features = ["derive", "rc"]}
serde_json = "1.0.39"
either = "1.5.2"
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"
console_error_panic_hook = "0.1.6"
uuid = { version = "0.7", features = ["serde", "v4", "wasm-bindgen"] }
chrono = { version = "0.4", features = ["serde"] }
